# plat_schema

./: .gitignore  compare_schema.sh  deployer.py  folder_struct.sh  replace_backup.sh  snapshot_schema.sh
.circleci/: config.yml
backup/platform/: snapshot.sql
diffs/platform/: schema_diff.sql
forecast/: v0.0.1_caiso.plan.yaml  v0.0.2_caiso.plan.yaml
forecast/base/v0.0.1/: add_market_tables.sql  add_reference_tables.sql
forecast/caiso/v0.0.1/: add_column_created_on.sql
platform/: v0.0.1_caiso.plan.yaml  v0.0.1_miso.plan.yaml  v0.0.2_caiso.plan.yaml  v0.1.1_caiso.plan.yaml  v0.1.1_dev_caiso.plan.yaml  v0.1.2_caiso.plan.yaml
platform/base/v0.1.1/: add_market_tables.sql  add_reference_tables.sql  populate_reference_tables.sql
platform/base/v0.1.2/: add_market_tables.sql  populate_market_tables.sql
platform/caiso/: config.yaml
platform/caiso/v0.1.1/: add_column_created_on.sql  populate_market_tables.sql
platform/dev/: v0.1.1_caiso.plan.yaml  v0.1.2_caiso.plan.yaml
platform/dev/miso/v0.0.1/: add_column_01.sql
platform/prod/caiso/v0.1.2/: add_column_is_admin.sql
snapshots/platform/: snapshot.sql
tool_deployer/: pyproject.toml
tool_deployer/src/tool_deployer/: cli.py  deployment.py  models.py  validators.py
